# SDL2-Shoooter

./: .gitignore  1.cpp  CMakeLists.txt  README.md  hello.txt
3002_2/: CMakeLists.txt  MySDL2Project  common.h  defs.h  draw.cpp  draw.h  init.cpp  init.h  input.cpp  input.h  main.cpp  stage.cpp  stage.h  struct.h
include/: Player.h  background.h  boss.h  bullet.h  common.h  enemy.h  enemy_control.h
src/: CMakeLists.txt  Player.cpp  background.cpp  bullet.cpp  enemy.cpp  main.cpp  minion_explosion.cpp
untitled/: .gitignore  CMakeLists.txt  MySDL2Project
untitled/include/: Player.h  background.h  boss.h  boss_attack.h  bullet.h  common.h  drop_items.h  enemy.h  enemy_control.h  minion_bullet.h  minion_explosion.h  readme.txt
untitled/src/: CMakeLists.txt  Player.cpp  background.cpp  boss.cpp  boss_attack.cpp  bullet.cpp  drop_items.cpp  enemy.cpp  enemy_control.cpp  main.cpp  minion_bullet.cpp  minion_explosion.cpp
